--- a/src/app/pages/trucklog/trucklog.page.scss
+++ b/src/app/pages/trucklog/trucklog.page.scss
@@ -9,4 +9,10 @@ ion-toolbar {
 ion-item {
     --inner-padding-bottom: 15px;
     --inner-padding-top: 15px;
+    --background: #444444;
+    color: white;
+}
+
+ion-list {
+    background-color: #444444;
 }
