--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -13,7 +13,7 @@
   --ion-color-secondary-shade: #000000;
   --ion-color-secondary-tint: #1a1a1a;
 
-  --ion-color-tertiary: #f7f7f7;
+  --ion-color-tertiary: #EFEFEF;
   --ion-color-tertiary-rgb: 247,247,247;
   --ion-color-tertiary-contrast: #000000;
   --ion-color-tertiary-contrast-rgb: 0,0,0;
