--- a/src/app/pages/precheck/precheck.page.scss
+++ b/src/app/pages/precheck/precheck.page.scss
@@ -1,5 +1,5 @@
 ion-content{
-    --background: #EFEFEF;
+    --background: #444444;
 }
 
 * {
@@ -12,7 +12,7 @@ h2 {
 }
 
 ion-card {
-    background-color: #f7f7f7;
+    background-color: #EFEFEF;
     font-size: 80px;
 }
 
