--- a/src/app/pages/userlog/userlogdetail/userlogdetail.page.scss
+++ b/src/app/pages/userlog/userlogdetail/userlogdetail.page.scss
@@ -10,3 +10,12 @@ ion-item {
 ion-toolbar {
     --min-height:60px;
 }
+
+ion-item {
+    --background: #444444;
+    color: white;
+}
+
+ion-list {
+    background-color: #444444;
+}
