adjust truck log layout to card view

--- a/src/app/pages/trucklog/trucklog.page.html
+++ b/src/app/pages/trucklog/trucklog.page.html
@@ -2,18 +2,37 @@
     <ion-toolbar>
         <ion-buttons slot="start">
             <ion-menu-button>
-              
+
             </ion-menu-button>
-          </ion-buttons>
-      <ion-title>Truck Time Log</ion-title>
+        </ion-buttons>
+        <ion-title>Truck Time Log</ion-title>
     </ion-toolbar>
-  </ion-header>
-  
-  <ion-content>
-      <ion-list>
-          <ion-item *ngFor="let truck of trucks">
-              <ion-label (click)="navigateToTruckOverview(truck)">{{truck.name}}</ion-label>
-          </ion-item>
-        </ion-list>
-  </ion-content>
-  
+</ion-header>
+
+<ion-content>
+    <!--<ion-list>
+        <ion-item *ngFor="let truck of trucks">
+            <ion-label (click)="navigateToTruckOverview(truck)">{{truck.name}}</ion-label>
+        </ion-item>
+    </ion-list>-->
+    <ion-searchbar animated showCancelButton="never"></ion-searchbar>
+    <ion-grid>
+        <ion-row>
+            <ion-col *ngFor="let truck of trucks" size="6">
+                <ion-card (click)="navigateToTruckOverview(truck)">
+                    <ion-card-header>
+                        <ion-card-title>{{truck.name}}</ion-card-title>
+                    </ion-card-header>
+                    <ion-card-content>
+                        <ion-grid>
+                            <ion-row>
+                                <ion-col>Daily Usage: 50%</ion-col>
+                                <ion-col>Collisions today: 0</ion-col>
+                            </ion-row>
+                        </ion-grid>
+                    </ion-card-content>
+                </ion-card>
+            </ion-col>
+        </ion-row>
+    </ion-grid>
+</ion-content>
