--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -8,13 +8,6 @@ ion-content{
     //--background: url(../../../assets/background.jpg) 0 0/100% 100% no-repeat;
 }
 
-/*
-@media screen and (min-height : 200px) and (max-height : 800px) {
-    .Landing-formContainer{
-        padding-top: 35px;
-    }
-}*/
-
 h1 {
     text-align: center;
     font-size: 100px;
@@ -87,4 +80,9 @@ ion-toolbar {
 
 ion-title {
     font-size: 25px;
+}
+
+ion-checkbox{
+    margin-top: 50px;
+    margin-right: 10px;
 }
