--- a/src/app/pages/orders/orders.page.html
+++ b/src/app/pages/orders/orders.page.html
@@ -5,228 +5,232 @@
 
       </ion-menu-button>
     </ion-buttons>
+    <ion-buttons slot="end">
+      <ion-button color="danger" (click)="logout()">Log out</ion-button>
+    </ion-buttons>
     <ion-title>Orders</ion-title>
   </ion-toolbar>
 </ion-header>
 
+
 <ion-content>
   <ion-slides #mySlider pager="true" [options]="slideOpts" [pager]="false">
-        <ion-slide>
-          <div>
-            <ion-card>
-                <ion-card-content>
-                  <ion-list>
-                    <ion-item>
-                      <ion-grid>
-                        <ion-row>
-                          <ion-col>
-                            <b>Order Number:</b> 0735
-                          </ion-col>
-                          <ion-col>
-                            <b>Picklist:</b> 0095057
-                          </ion-col>
-                        </ion-row>
-                      </ion-grid>
-                    </ion-item>
-                    <ion-item>
-                      <ion-grid>
-                        <ion-row>
-                          <ion-col>
-                              <b>Line Location:</b> PGSUB1
-                          </ion-col>
-                          <ion-col>
-                              <b>Location:</b> HOSE Tilt B1
-                          </ion-col>
-                        </ion-row>
-                      </ion-grid>
-                    </ion-item>
-                  </ion-list>
-                </ion-card-content>
-              </ion-card>
-              <ion-card>
-                <ion-card-content>
-                  <ion-list>
-                    <ion-item>
-                      <ion-grid>
-                        <ion-row>
-                          <ion-col>
-                              <b>Pick Location:</b>
-                          </ion-col>
-                          <ion-col>
-                              <b>Item Number:</b>
-                          </ion-col>
-                          <ion-col>
-                              <b>Quantity:</b>
-                          </ion-col>
-                        </ion-row>
-                      </ion-grid>
-                    </ion-item>
-                    <ion-item>
-                      <ion-grid>
-                        <ion-row>
-                          <ion-col>
-                            1M01
-                          </ion-col>
-                          <ion-col>
-                            623342
-                          </ion-col>
-                          <ion-col>
-                            1
-                          </ion-col>
-                        </ion-row>
-                      </ion-grid>
-                    </ion-item>
-                  </ion-list>
-                </ion-card-content>
-              </ion-card>
-            </div>
-        </ion-slide>
-        <ion-slide>
-            <div>
-              <ion-card>
-                  <ion-card-content>
-                    <ion-list>
-                      <ion-item>
-                        <ion-grid>
-                          <ion-row>
-                            <ion-col>
-                              <b>Order Number:</b> 0735
-                            </ion-col>
-                            <ion-col>
-                              <b>Picklist:</b> 0095057
-                            </ion-col>
-                          </ion-row>
-                        </ion-grid>
-                      </ion-item>
-                      <ion-item>
-                        <ion-grid>
-                          <ion-row>
-                            <ion-col>
-                                <b>Line Location:</b> PGSUB1
-                            </ion-col>
-                            <ion-col>
-                                <b>Location:</b> HOSE Tilt B1
-                            </ion-col>
-                          </ion-row>
-                        </ion-grid>
-                      </ion-item>
-                    </ion-list>
-                  </ion-card-content>
-                </ion-card>
-                <ion-card>
-                  <ion-card-content>
-                    <ion-list>
-                      <ion-item>
-                        <ion-grid>
-                          <ion-row>
-                            <ion-col>
-                                <b>Pick Location:</b>
-                            </ion-col>
-                            <ion-col>
-                                <b>Item Number:</b>
-                            </ion-col>
-                            <ion-col>
-                                <b>Quantity:</b>
-                            </ion-col>
-                          </ion-row>
-                        </ion-grid>
-                      </ion-item>
-                      <ion-item>
-                        <ion-grid>
-                          <ion-row>
-                            <ion-col>
-                              1M01
-                            </ion-col>
-                            <ion-col>
-                              623342
-                            </ion-col>
-                            <ion-col>
-                              1
-                            </ion-col>
-                          </ion-row>
-                        </ion-grid>
-                      </ion-item>
-                    </ion-list>
-                  </ion-card-content>
-                </ion-card>
-              </div>
-          </ion-slide>
-          <ion-slide>
-              <div>
-                <ion-card>
-                    <ion-card-content>
-                      <ion-list>
-                        <ion-item>
-                          <ion-grid>
-                            <ion-row>
-                              <ion-col>
-                                <b>Order Number:</b> 0735
-                              </ion-col>
-                              <ion-col>
-                                <b>Picklist:</b> 0095057
-                              </ion-col>
-                            </ion-row>
-                          </ion-grid>
-                        </ion-item>
-                        <ion-item>
-                          <ion-grid>
-                            <ion-row>
-                              <ion-col>
-                                  <b>Line Location:</b> PGSUB1
-                              </ion-col>
-                              <ion-col>
-                                  <b>Location:</b> HOSE Tilt B1
-                              </ion-col>
-                            </ion-row>
-                          </ion-grid>
-                        </ion-item>
-                      </ion-list>
-                    </ion-card-content>
-                  </ion-card>
-                  <ion-card>
-                    <ion-card-content>
-                      <ion-list>
-                        <ion-item>
-                          <ion-grid>
-                            <ion-row>
-                              <ion-col>
-                                  <b>Pick Location:</b>
-                              </ion-col>
-                              <ion-col>
-                                  <b>Item Number:</b>
-                              </ion-col>
-                              <ion-col>
-                                  <b>Quantity:</b>
-                              </ion-col>
-                            </ion-row>
-                          </ion-grid>
-                        </ion-item>
-                        <ion-item>
-                          <ion-grid>
-                            <ion-row>
-                              <ion-col>
-                                1M01
-                              </ion-col>
-                              <ion-col>
-                                623342
-                              </ion-col>
-                              <ion-col>
-                                1
-                              </ion-col>
-                            </ion-row>
-                          </ion-grid>
-                        </ion-item>
-                      </ion-list>
-                    </ion-card-content>
-                  </ion-card>
-                </div>
-            </ion-slide>
-      </ion-slides>
+    <ion-slide>
+      <div>
+        <ion-card>
+          <ion-card-content>
+            <ion-list>
+              <ion-item>
+                <ion-grid>
+                  <ion-row>
+                    <ion-col>
+                      <b>Order Number:</b> 0735
+                    </ion-col>
+                    <ion-col>
+                      <b>Picklist:</b> 0095057
+                    </ion-col>
+                  </ion-row>
+                </ion-grid>
+              </ion-item>
+              <ion-item>
+                <ion-grid>
+                  <ion-row>
+                    <ion-col>
+                      <b>Line Location:</b> PGSUB1
+                    </ion-col>
+                    <ion-col>
+                      <b>Location:</b> HOSE Tilt B1
+                    </ion-col>
+                  </ion-row>
+                </ion-grid>
+              </ion-item>
+            </ion-list>
+          </ion-card-content>
+        </ion-card>
+        <ion-card>
+          <ion-card-content>
+            <ion-list>
+              <ion-item>
+                <ion-grid>
+                  <ion-row>
+                    <ion-col>
+                      <b>Pick Location:</b>
+                    </ion-col>
+                    <ion-col>
+                      <b>Item Number:</b>
+                    </ion-col>
+                    <ion-col>
+                      <b>Quantity:</b>
+                    </ion-col>
+                  </ion-row>
+                </ion-grid>
+              </ion-item>
+              <ion-item>
+                <ion-grid>
+                  <ion-row>
+                    <ion-col>
+                      1M01
+                    </ion-col>
+                    <ion-col>
+                      623342
+                    </ion-col>
+                    <ion-col>
+                      1
+                    </ion-col>
+                  </ion-row>
+                </ion-grid>
+              </ion-item>
+            </ion-list>
+          </ion-card-content>
+        </ion-card>
+      </div>
+    </ion-slide>
+    <ion-slide>
+      <div>
+        <ion-card>
+          <ion-card-content>
+            <ion-list>
+              <ion-item>
+                <ion-grid>
+                  <ion-row>
+                    <ion-col>
+                      <b>Order Number:</b> 0735
+                    </ion-col>
+                    <ion-col>
+                      <b>Picklist:</b> 0095057
+                    </ion-col>
+                  </ion-row>
+                </ion-grid>
+              </ion-item>
+              <ion-item>
+                <ion-grid>
+                  <ion-row>
+                    <ion-col>
+                      <b>Line Location:</b> PGSUB1
+                    </ion-col>
+                    <ion-col>
+                      <b>Location:</b> HOSE Tilt B1
+                    </ion-col>
+                  </ion-row>
+                </ion-grid>
+              </ion-item>
+            </ion-list>
+          </ion-card-content>
+        </ion-card>
+        <ion-card>
+          <ion-card-content>
+            <ion-list>
+              <ion-item>
+                <ion-grid>
+                  <ion-row>
+                    <ion-col>
+                      <b>Pick Location:</b>
+                    </ion-col>
+                    <ion-col>
+                      <b>Item Number:</b>
+                    </ion-col>
+                    <ion-col>
+                      <b>Quantity:</b>
+                    </ion-col>
+                  </ion-row>
+                </ion-grid>
+              </ion-item>
+              <ion-item>
+                <ion-grid>
+                  <ion-row>
+                    <ion-col>
+                      1M01
+                    </ion-col>
+                    <ion-col>
+                      623342
+                    </ion-col>
+                    <ion-col>
+                      1
+                    </ion-col>
+                  </ion-row>
+                </ion-grid>
+              </ion-item>
+            </ion-list>
+          </ion-card-content>
+        </ion-card>
+      </div>
+    </ion-slide>
+    <ion-slide>
+      <div>
+        <ion-card>
+          <ion-card-content>
+            <ion-list>
+              <ion-item>
+                <ion-grid>
+                  <ion-row>
+                    <ion-col>
+                      <b>Order Number:</b> 0735
+                    </ion-col>
+                    <ion-col>
+                      <b>Picklist:</b> 0095057
+                    </ion-col>
+                  </ion-row>
+                </ion-grid>
+              </ion-item>
+              <ion-item>
+                <ion-grid>
+                  <ion-row>
+                    <ion-col>
+                      <b>Line Location:</b> PGSUB1
+                    </ion-col>
+                    <ion-col>
+                      <b>Location:</b> HOSE Tilt B1
+                    </ion-col>
+                  </ion-row>
+                </ion-grid>
+              </ion-item>
+            </ion-list>
+          </ion-card-content>
+        </ion-card>
+        <ion-card>
+          <ion-card-content>
+            <ion-list>
+              <ion-item>
+                <ion-grid>
+                  <ion-row>
+                    <ion-col>
+                      <b>Pick Location:</b>
+                    </ion-col>
+                    <ion-col>
+                      <b>Item Number:</b>
+                    </ion-col>
+                    <ion-col>
+                      <b>Quantity:</b>
+                    </ion-col>
+                  </ion-row>
+                </ion-grid>
+              </ion-item>
+              <ion-item>
+                <ion-grid>
+                  <ion-row>
+                    <ion-col>
+                      1M01
+                    </ion-col>
+                    <ion-col>
+                      623342
+                    </ion-col>
+                    <ion-col>
+                      1
+                    </ion-col>
+                  </ion-row>
+                </ion-grid>
+              </ion-item>
+            </ion-list>
+          </ion-card-content>
+        </ion-card>
+      </div>
+    </ion-slide>
+  </ion-slides>
 
   <ion-button expand="block" (click)="swipeNext()">Done</ion-button>
   <div class="container">
     <img src="../../../assets/map.png" />
     <ion-button class="special-button" color="danger" expand="default">Emergency</ion-button>
-    <ion-button class="special-button" color="medium" expand="default">Report    </ion-button>
+    <ion-button class="special-button" color="medium" expand="default">Report </ion-button>
   </div>
 </ion-content>
