adjust login layout

--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -86,3 +86,11 @@ ion-checkbox{
     margin-top: 30px;
     margin-right: 10px;
 }
+
+ion-grid {
+    padding: 0;
+}
+
+ion-col {
+    padding: 0;
+}
