--- a/src/app/pages/trucklog/trucklog.page.html
+++ b/src/app/pages/trucklog/trucklog.page.html
@@ -5,7 +5,7 @@
 
             </ion-menu-button>
         </ion-buttons>
-        <ion-title>Truck Time Log</ion-title>
+        <ion-title>Trucks</ion-title>
     </ion-toolbar>
 </ion-header>
 
