--- a/src/app/pages/userlog/userlog.page.html
+++ b/src/app/pages/userlog/userlog.page.html
@@ -2,18 +2,23 @@
     <ion-toolbar>
         <ion-buttons slot="start">
             <ion-menu-button>
-              
+
             </ion-menu-button>
-          </ion-buttons>
-      <ion-title>Drivers</ion-title>
+        </ion-buttons>
+        <ion-title>Drivers</ion-title>
     </ion-toolbar>
-  </ion-header>
-  
-  <ion-content>
-      <ion-list>
-          <ion-item *ngFor="let user of users">
-              <ion-label (click)="navigateToUserDetail(user)">{{user.firstname}} {{user.lastname}}</ion-label>
-          </ion-item>
-        </ion-list>
-  </ion-content>
-  
+</ion-header>
+
+<ion-content>
+    <ion-searchbar (ionInput)="search($event)" animated showCancelButton="never"></ion-searchbar>
+    <ion-list *ngIf="!searchClicked">
+        <ion-item *ngFor="let user of users">
+            <ion-label (click)="navigateToUserDetail(user)">{{user.firstname}} {{user.lastname}}</ion-label>
+        </ion-item>
+    </ion-list>
+    <ion-list *ngIf="searchClicked">
+        <ion-item *ngFor="let user of resultArr">
+            <ion-label (click)="navigateToUserDetail(user)">{{user.firstname}} {{user.lastname}}</ion-label>
+        </ion-item>
+    </ion-list>
+</ion-content>
