--- a/src/app/pages/orders/orders.page.html
+++ b/src/app/pages/orders/orders.page.html
@@ -226,7 +226,7 @@
 
   <ion-button expand="block" (click)="swipeNext()">Done</ion-button>
   <div class="container">
-    <img src="../../../assets/map.png" />
+    <img src="../../../assets/WarehouseMap_new.gif" />
     <ion-button class="special-button" color="danger" expand="default">Emergency</ion-button>
     <ion-button class="special-button" color="medium" expand="default">Report </ion-button>
   </div>
