--- a/src/app/pages/orders/orders.page.html
+++ b/src/app/pages/orders/orders.page.html
@@ -11,7 +11,7 @@
 </ion-header>
 <ion-content>
   <!--<ion-icon name="ios-battery-full"></ion-icon>-->
-  <ion-slides #mySlider pager="true" [options]="slideOpts" [pager]="false">
+  <ion-slides #mySlider pager="true" [pager]="false">
     <ion-slide>
       <div>
         <ion-card>
