--- a/src/app/pages/tutorial/tutorial.page.html
+++ b/src/app/pages/tutorial/tutorial.page.html
@@ -5,7 +5,7 @@
 </ion-header>
 
 <ion-content>
-    <ion-slides pager="true" [options]="slideOpts">
+    <ion-slides pager="true">
         <ion-slide>
           <div>
               <p></p>
