adjust order screen layout

--- a/src/app/pages/orders/orders.page.scss
+++ b/src/app/pages/orders/orders.page.scss
@@ -33,7 +33,7 @@ ion-button {
 }
 
 img{
-    width: 90%;
+    width: 100%;
 }
 
 div {
@@ -70,5 +70,5 @@ ion-icon {
 }
 
 .listening {
-    --margin-top: 10px;
+    margin-top: 20px;
 }
