--- a/src/app/pages/trucklog/trucklog.page.html
+++ b/src/app/pages/trucklog/trucklog.page.html
@@ -15,7 +15,7 @@
             <ion-label (click)="navigateToTruckOverview(truck)">{{truck.name}}</ion-label>
         </ion-item>
     </ion-list>-->
-    <ion-searchbar (ionInput)="search($event)" animated showCancelButton="never"></ion-searchbar>
+    <ion-searchbar (ionInput)="search($event)" color="medium" animated showCancelButton="never"></ion-searchbar>
     <ion-grid>
         <ion-row *ngIf="!searchClicked">
             <ion-col *ngFor="let truck of trucks" size="6">
