--- a/src/app/pages/precheck/precheck.page.html
+++ b/src/app/pages/precheck/precheck.page.html
@@ -11,7 +11,7 @@
 
 
 <ion-content>
-      <h2>{{truck.name}}</h2>
+      <h2>{{truck?.name}}</h2>
       <div class="container">
           <img id="truckImage" src="../../../assets/lifttruck.png"/>
       </div>
