--- a/src/app/pages/orders/orders.page.html
+++ b/src/app/pages/orders/orders.page.html
@@ -12,9 +12,9 @@
 <ion-content>
   <!--<ion-icon name="ios-battery-full"></ion-icon>-->
   <div class="listening">
-    <ion-button class="listening" (click)="startListening()" color="medium" [disabled]="form.listeningStarted" class="special-button"
+    <ion-button class="listening" (click)="startListening()" color="medium" [disabled]="listeningStarted" class="special-button"
       expand="default">Start Listening</ion-button>
-    <ion-button class="listening" (click)="stopListening()" color="medium" [disabled]="form.listeningStopped" class="special-button"
+    <ion-button class="listening" (click)="stopListening()" color="medium" [disabled]="listeningStopped" class="special-button"
       expand="default">Stop Listening</ion-button>
   </div>
   <ion-slides #mySlider pager="true" [pager]="false">
