add emergency alert in order page

--- a/src/global.scss
+++ b/src/global.scss
@@ -47,3 +47,13 @@ ion-button {
 .scaledAlert {
     transform: scale(1.5);
 }
+
+.emergencyAlert {
+    transform: scale(1.5);
+    text-align: center;
+}
+
+.emergency {
+    color: red;
+    font-size: 40px;
+}
