add report alert and collision stats image

--- a/src/app/pages/collisions/collisions.page.html
+++ b/src/app/pages/collisions/collisions.page.html
@@ -1,14 +1,16 @@
 <ion-header>
-    <ion-toolbar>
-      <ion-buttons slot="start">
-        <ion-menu-button>
-  
-        </ion-menu-button>
-      </ion-buttons>
-      <ion-title>Collisions</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-menu-button>
+
+      </ion-menu-button>
+    </ion-buttons>
+    <ion-title>Collisions</ion-title>
+  </ion-toolbar>
+</ion-header>
 
 <ion-content>
-
+  <div class="container">
+    <img src="../../../assets/collisionstats.png" />
+  </div>
 </ion-content>
