--- a/src/app/pages/collisions/collisions.page.scss
+++ b/src/app/pages/collisions/collisions.page.scss
@@ -10,3 +10,12 @@ p {
     font-size:50px;
     color: gray;
 }
+
+img {
+    margin-top: 20px;
+    width: 90%;
+}
+
+.container {
+    text-align: center;
+}
