--- a/src/app/pages/orders/orders.page.html
+++ b/src/app/pages/orders/orders.page.html
@@ -234,6 +234,6 @@
   <div class="container">
     <img src="../../../assets/WarehouseMap_new.gif" />
     <ion-button class="special-button" (click)="presentEmergencyAlert()" color="danger" expand="default">Emergency</ion-button>
-    <ion-button class="special-button" color="medium" expand="default">Report </ion-button>
+    <ion-button class="special-button" (click)="presentReportAlert()" color="medium" expand="default">Report </ion-button>
   </div>
 </ion-content>
