--- a/src/app/pages/orders/orders.page.html
+++ b/src/app/pages/orders/orders.page.html
@@ -10,13 +10,27 @@
   </ion-toolbar>
 </ion-header>
 <ion-content>
-  <!--<ion-icon name="ios-battery-full"></ion-icon>-->
-  <div class="listening">
-    <ion-button class="listening" (click)="startListening()" color="medium" [disabled]="listeningStarted" class="special-button"
-      expand="default">Start Listening</ion-button>
-    <ion-button class="listening" (click)="stopListening()" color="medium" [disabled]="listeningStopped" class="special-button"
-      expand="default">Stop Listening</ion-button>
-  </div>
+
+  <ion-grid>
+    <ion-row>
+      <ion-col size="6">
+        <ion-input placeholder="Threshold in m/s^2" type="number" [(ngModel)]="selfDefinedThreshold"
+          id="selfDefinedThreshold" class="inputfield"></ion-input>
+      </ion-col>
+      <ion-col size="6">
+        <ion-input placeholder="Interval in s" type="number" [(ngModel)]="selfDefinedInterval" id="selfDefinedInterval"
+          class="inputfield"></ion-input>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col size="6">
+        <ion-button (click)="startListening()" color="medium" [disabled]="listeningStarted" expand="default">Start Listening</ion-button>
+      </ion-col>
+      <ion-col size="6">
+        <ion-button (click)="stopListening()" color="medium" [disabled]="listeningStopped" expand="default">Stop Listening</ion-button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
   <ion-slides #mySlider pager="true" [pager]="false">
     <ion-slide>
       <div>
@@ -233,7 +247,9 @@
   <ion-button expand="block" (click)="swipeNext()">Done</ion-button>
   <div class="container">
     <img src="../../../assets/WarehouseMap_new.gif" />
-    <ion-button class="special-button" (click)="presentEmergencyAlert()" color="danger" expand="default">Emergency</ion-button>
-    <ion-button class="special-button" (click)="presentReportAlert()" color="medium" expand="default">Report </ion-button>
+    <ion-button class="special-button" (click)="presentEmergencyAlert()" color="danger" expand="default">Emergency
+    </ion-button>
+    <ion-button class="special-button" (click)="presentReportAlert()" color="medium" expand="default">Report
+    </ion-button>
   </div>
 </ion-content>
