--- a/src/app/pages/trucklog/truckoverview/truckoverview.page.html
+++ b/src/app/pages/trucklog/truckoverview/truckoverview.page.html
@@ -16,5 +16,5 @@
 </div>
 <p>Last Maintainance: 01/2020</p>
 <ion-card (click)="navigateToTruckDetail()"><p>Time Logs</p></ion-card>
-<ion-card><p>Defects</p></ion-card>
+<ion-card (click)="navigateToTruckDefects()"><p>Defects</p></ion-card>
 </ion-content>
