--- a/src/app/pages/trucklog/truckdefects/truckdefects.page.html
+++ b/src/app/pages/trucklog/truckdefects/truckdefects.page.html
@@ -1,9 +1,27 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>truckdefects</ion-title>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+    <ion-title>Defects</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
+
+
+    <ion-card>
+      <ion-item>
+          <ion-label class="custom-card-label">Bodywork</ion-label>
+        </ion-item>
+      <ion-card-content>
+          <ion-list>
+              <ion-item>
+                <ion-label>Scratch in bodywork at the left truck door</ion-label>
+              </ion-item>
+              <img class="defectImage" src="../../../assets/scratch.png"/>
+            </ion-list>
+      </ion-card-content>
+    </ion-card>
 
 </ion-content>
